# harmony

./: Cargo.toml  LICENSE
.github/workflows/: build-release.yml  build-test.yml  deps.sh
docs/: binance.md  person.md
src/: lib.rs  main.rs  time.rs
src/api/: mod.rs
src/api/admin/: mod.rs  person.rs
src/api/binance/: mod.rs  secret.rs
src/api/binance/spot/: buy.rs  limit.rs  mod.rs  order.rs  predict.rs  sell.rs
src/api/general/: health.rs  mod.rs
src/api/http/: claim.rs  general.rs  json.rs  mod.rs  response.rs
src/api/person/: create.rs  mod.rs  verify.rs
src/database/: client.rs  mod.rs
src/database/model/: mod.rs
src/database/model/binance/: mod.rs  secret.rs  spot.rs  spot_buying_order.rs  spot_selling_order.rs
src/database/model/cyptocurrency/: price.rs
src/database/model/person/: mod.rs
src/database/model/promise/: binance_spot_limit.rs  logging.rs  mod.rs
src/service/: mod.rs  time.rs
src/service/promise/: binance_spot_limit.rs  mod.rs
src/service/promise/permanent/: cryptocurrency.rs  mod.rs
