[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

jsonwebtoken = "9"

# Fix: Segmentation fault on x86_64-unknown-linux-musl
openssl = { version = "0.10", features = ["vendored"] }

# Binance Spot Trading
delay = { git = "https://github.com/Sricor/delay.git" }
rust_binance = { git = "https://github.com/Sricor/binance.git"}
